# Tetr

./: .gitignore  CMakeLists.txt  README.md  Tetr.vcxproj  Tetr.vcxproj.filters  color.h  control.cpp  control.h  define.h  draw.cpp  draw.h  game.cpp  game.h  main.cpp  music.cpp  music.h  next_queue.cpp  next_queue.h  piece.cpp  piece.h  terminal_control.cpp  tetromino.cpp  tetromino.h  utils.cpp  utils.h
control/: control.cpp  control.h  tetris.code-workspace
draw/: draw.cpp  draw.h
game/: game.cpp  game.h
next_queue/: next_queue.cpp  next_queue.h
piece/: piece.cpp  piece.h
terminal_control/: terminal_control.cpp  terminal_control.h
tetromino/: tetromino.cpp  tetromino.h
utils/: utils.cpp  utils.h
